added htmx and tailwind

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <title>{% block title %}{% endblock %}</title>
   {% load static %}
   <script src="{% static 'htmx.min.js' %}" defer></script>
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link href="{% static 'src/styles.css' %}" rel="stylesheet">
 </head>
 <body>
   {% block content %}
